Fixes the issues with spacing & margings on the single services page

--- a/wp-content/themes/multunus/sass/custom/_single_services.scss
+++ b/wp-content/themes/multunus/sass/custom/_single_services.scss
@@ -18,6 +18,7 @@
       small {
         font-size: 16px;
         color: #656565;
+        margin-top: 10px;
       }
     }
     
